--- a/styles/scss/partials/base/_base.scss
+++ b/styles/scss/partials/base/_base.scss
@@ -11,6 +11,7 @@
 body {
     line-height: 1.42857143;
     margin: 0;
+    height: 100vh;
 }
 
 html {
@@ -32,4 +33,8 @@ select {
 
 h1 {
     line-height: 1.1;
+}
+
+.noScroll {
+    position: fixed;
 }
