--- a/styles/scss/partials/layout/_containers.scss
+++ b/styles/scss/partials/layout/_containers.scss
@@ -8,6 +8,13 @@
     top: 0;
     left: 0;
     transition: 0.4s;
+    height: 100%;
+}
+
+.main__holder {
+    position: relative;
+    height: 100%;
+    overflow-y: auto;
 }
 
 .sidebar {
